[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciona-atoms-signal"
version = "0.1.0"
description = "Signal-processing provider repo for sciona.atoms.* and sciona.probes.*"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "biosppy",
  "icontract",
  "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
